force-app/main/default/objects/DA_Compensation__b/DA_Compensation__b.object-meta.xml
<CustomObject>
    <label>DA Compensation</label>
    <pluralLabel>DA Compensation</pluralLabel>
</CustomObject>