force-app/main/default/objects/DA_Compensation__b/fields/Compensation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Amount__c</fullName>
    <label>Value of Contents</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>