force-app/main/default/objects/DA_Compensation__b/fields/Compensation_Form_Token__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Form_Token__c</fullName>
    <label>Compensation Form Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>