force-app/main/default/objects/DA_Compensation__b/fields/Delegation_Limit__c.field-meta.xml
<CustomField>
    <fullName>Delegation_Limit__c</fullName>
    <label>Delegation Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>