force-app/main/default/objects/DA_Compensation__b/fields/Destination_Country__c.field-meta.xml
<CustomField>
    <fullName>Destination_Country__c</fullName>
    <label>Destination Country</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>