force-app/main/default/objects/DA_Compensation__b/fields/Fulfillment_Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Ordered_Date__c</fullName>
    <label>Fulfillment Ordered Date</label>
    <type>DateTime</type>
</CustomField>