force-app/main/default/objects/DA_Compensation__b/fields/GLAMOUNT__c.field-meta.xml
<CustomField>
    <fullName>GLAMOUNT__c</fullName>
    <label>GLAMOUNT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>