force-app/main/default/objects/DA_Compensation__b/fields/MoneyOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>MoneyOrderNumber__c</fullName>
    <label>Money Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>