force-app/main/default/objects/DA_Compensation__b/fields/OfficeOfOrigin__c.field-meta.xml
<CustomField>
    <fullName>OfficeOfOrigin__c</fullName>
    <label>Office Of Origin</label>
    <referenceTo>Country_Codes__c</referenceTo>
    <relationshipName>OfficeOfOrigin1564410500504</relationshipName>
    <type>Lookup</type>
</CustomField>