force-app/main/default/objects/DA_Compensation__b/fields/POSTINGPERIOD__c.field-meta.xml
<CustomField>
    <fullName>POSTINGPERIOD__c</fullName>
    <label>POSTINGPERIOD</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>