force-app/main/default/objects/DA_Compensation__b/fields/Proof_of_Value__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Value__c</fullName>
    <label>Proof of Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>