force-app/main/default/objects/DA_Compensation__b/fields/TEXT1__c.field-meta.xml
<CustomField>
    <fullName>TEXT1__c</fullName>
    <label>TEXT1</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>